fix overflow

--- a/src/app/components/songsheet-textarea/songsheet-textarea.component.scss
+++ b/src/app/components/songsheet-textarea/songsheet-textarea.component.scss
@@ -16,27 +16,31 @@
   z-index: 5;
   text-align: right;
   width: 30px;
-  height: 11px;
+  height: 100%;
   padding-right: 5px;
-  margin-right: 5px;
   font-size: 0.9em;
   content: attr(data-content);
   background: $dark-grey;
   color: $white;
   font-family: $robotoMono;
-  display: inline-block;
+  display: table-cell;
   vertical-align: top;
 }
 .line:last-child::before{
   padding-bottom: 10px;
 }
 .line ::ng-deep{
+  display: table;
 
   pre{
     display: inline;
     margin: 0;
-    white-space: pre-wrap;
     word-break: break-all;
+    white-space: pre-wrap;
+  }
+  .line-wrapper{
+    padding-left: 5px;
+    display: table-cell;
   }
 
   .red{
@@ -60,7 +64,7 @@
   top: 0;
   right: 0;
   background: $grey;
-  width: 100%;
+  min-width: 100%;
   min-height: 100%;
   z-index: -1;
   font-family: $robotoMono;
@@ -73,7 +77,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: 100%;
+  min-width: 100%;
   min-height: 100%;
   opacity: 1;
   background: transparent;
@@ -85,15 +89,13 @@
   font-family: $robotoMono; 
   font-size: 0.8em;
   outline: none;
-  overflow-x: scroll;
   padding: 2px;
   padding-left: 40px;
   letter-spacing: 0.1px;
-  resize: none;
 }
 #wrapper{
   position: relative;
   width: 100%;
   height: 100%;
-  overflow-y: auto;
+  overflow: auto;
 }
